--- a/src/CSS/app.css
+++ b/src/CSS/app.css
@@ -19,7 +19,6 @@
 }
 
 body {
-  width: 100%;
   margin: 0;
   animation: changeBg 10s linear infinite;
 }
